# cmake_physics_libs_test

./: README.md
raylib_bullet3_physics/: CMakeLists.txt  main.cpp
raylib_bullet3_physics_c/: CMakeLists.txt  README.md  main.cpp
raylib_bullet3_physics_cpp/: run.bat
raylib_jolt_physics/: CMakeLists.txt  main.cpp  run.bat
raylib_joltc_physics/: CMakeLists.txt  README.md
raylib_joltc_physics/src/: main.c
raylib_ode_physics/: README.md  main.c
raylib_reactphysics3d/: CMakeLists.txt  README.md
raylib_reactphysics3d/src/: main.cpp
